# HenWer

./: .gitignore  .project  .pydevproject  CHANGES  ISSUES  README  cd_venv_dir.sh  pyproject.toml  requirements.txt  setjog.sh  start.sh
henwer/: clipboard.py  commit.py  config.py  download.py  goto.py  imageinfo.py  imageviewer.py  manwer.py  mongodb.py  myimage.py  preferences  progressbar.py  resources.py  screenscraper.py  sitesel.py  start.py
henwer/backend/: fetish_iiichan_net.py  fetish_iiichan_net_OLD.py
henwer/html/: about.html  key_bindings.html
