[tool.poetry]
name = "henwer"
version = "0.1.0"
description = ""
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wxpython = "^4.2.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
